--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,8 @@ body {
 
 .aboutImage {
   max-width: 100%;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .skillsSection,
@@ -343,5 +345,24 @@ body {
   width: 100%;
   height: 100%;
   background: url(../img/loader.gif) center center no-repeat;
+}
+
+.rowicon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding-top: 2px;
+  padding-left: 2px;
+  margin-left: 2px;
+  padding-right: 2px;
+  margin-right: 2px;
+}
+
+.ab {
+  color: #bdc3c7;
 }
 /*# sourceMappingURL=style.css.map */
