--- a/css/style.scss
+++ b/css/style.scss
@@ -66,7 +66,7 @@ body {
 
 .aboutImage {
 	max-width: 100%;
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
 }
 
 .skillsSection,
@@ -299,7 +299,8 @@ body {
 .copyrightSection {
 	background-color: #000;
 	color: #fff;
-	padding: 30px 5px;
+	padding: 10px 5px;
+	text-align: center;
 }
 
 .copyrightSection p {
@@ -352,21 +353,21 @@ body {
 	background: url(../img/loader.gif) center center no-repeat;
 }
 
-.rowicon {
-	display: flex;
-	flex-direction: row;
-	// margin-top: 50px;
-	padding-top: 2px;
-	padding-left: 2px;
-	margin-left: 2px;
-	padding-right: 2px;
-	margin-right: 2px;
 
-}
 .ab {
 	color: #bdc3c7;
-	// text-align: center;
 }
+.flex-container {
+	display: flex;
+	align-items: center;
+   justify-content: center;
+  }
+  
+  .flex-container > div {
+	margin-top: 0;
+	padding-left: 15px;
+	font-size: 15px;
+  }
 
 
 
