--- a/css/style.scss
+++ b/css/style.scss
@@ -369,6 +369,19 @@ body {
 	font-size: 15px;
   }
 
+  .fa.fa-instagram {
+	color: transparent;
+	background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+	background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+	background-clip: text;
+	-webkit-background-clip: text;
+  }
+
+.fa-linkedin, .fa-linkedin-square {
+    color: #007bb6
+}
+
+
 
 
 
